style(hover) add spacing between progress bars and additional timeouts

--- a/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
+++ b/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
@@ -1444,6 +1444,10 @@
             </div>
           </div>
         </div>
+        <div class="footer">
+          <div class="klout-logo"><img src="/lithium/sm_klout_brand.png"></div>
+
+        </div>
       </div>
     </div>
 
@@ -1456,7 +1460,7 @@
         visibility: hidden;
       }
       #klout-score-hover .inner-div {
-        width: 355px;
+        width: 380px;
         position: absolute;
         margin-top: 8px;
         padding: 25px;
@@ -1484,7 +1488,10 @@
         width: 75px;
         height: 75px;
         margin-right: 15px;
-        background: transparent url(../../lithium/linc-sony-score.png) no-repeat center top;
+        background: transparent url(../../lithium/sm_klout_score.png) no-repeat center top;
+      }
+      #klout-score-header {
+        margin-bottom: 15px;
       }
       #klout-score-hover .content {
         display: inline-block;
@@ -1492,6 +1499,7 @@
         margin-top: 20px;
       }
       #klout-score-hover .content > .bold {
+        padding-top: 20px
         font-weight: bold;
       }
       #klout-score-hover .progress-bar-wrapper > div {
@@ -1516,6 +1524,9 @@
       #klout-score-hover .progress-bar-wrapper > .type-info span {
         vertical-align: top;
       }
+      #klout-score-hover .footer {
+        padding-top:15px;
+       }
     </style>
     <script type="text/javascript">
       bindEvent('onload', function () {
