New klout buttons

--- a/assets/admin/directives/activity.html
+++ b/assets/admin/directives/activity.html
@@ -33,7 +33,7 @@
 		</div>
 		<div style="margin-top:1em;">
 			<button class="btn btn-default">Comment</button>
-			<button class="btn" ng-click="sendPerk()">
+			<button class="btn btn-default" ng-click="sendPerk()">
 				<img src="images/klout.png">
 				Send Perk
 			</button>
