--- a/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
+++ b/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
@@ -1309,6 +1309,44 @@
           <span class="ws-product-item-number-value item-number">XBR-55X900A</span>
         </div>
       </h2>
+
+      <style type="text/css">
+        .bottom-header {
+          height: 25px;
+        }
+        .bottom-header > div {
+          display: inline-block;
+          height: 25px;
+          margin-right: 75px;
+          vertical-align: top;
+        }
+        .bottom-header > div > img,
+        .bottom-header > div button {
+          height: 25px;
+        }
+        .bottom-header .li-wants-button {
+          color: #FFFFFF;
+          background-color: #339933;
+        }
+        .sny-product-header .sny-product-price-group {
+          position: relative;
+          right: 0px;
+        }
+        .sny-product-header .kor-product-list-price {
+          float: left;
+        }
+      </style>
+      <div class="bottom-header">
+        <div>
+          <img src="/lithium/mobile_stars.png">
+        </div>
+        <div>
+          <img src="/lithium/sm_klout_+k_green.png">
+        </div>
+        <div class="wants-button-elm">
+          <li:wants-button href="http://54.193.114.254:1337/products/1/wants"><button class="li-wants-button" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
+        </div>
+      </div>
       <!--<div id="BVRRSummaryContainer">-->
         <!--<div class="ws-product-rating ">-->
           <!--<div class="ws-product-rating-value ws-product-rating-value-4-5"></div>-->
@@ -1319,16 +1357,6 @@
             <!--a Review</a></div>-->
       <!--</div>-->
 
-      <!--<div class="ws-group sny-product-price-group">-->
-        <!--<div class="kor-product-sale-price sny-product-sale-price" data-dynamic-block-name="Sale-Price"-->
-             <!--data-dynamic-block-id="hHEKmUBwmSQAAAFBOEQv3S8v">-->
-          <!--<span-->
-              <!--class="kor-product-sale-price-value ws-sale-price ws-sale-price-lower ws-sale-price-temporary">$ 2,999.99</span>-->
-        <!--</div>-->
-        <!--<div class="kor-product-price kor-product-list-price" data-dynamic-block-name="Informational-Price"-->
-             <!--data-dynamic-block-id="DRsKmUBwsaMAAAFBFHsv3S8v"><span-->
-            <!--class="kor-product-was-price-value ws-price  ws-price-higher ws-price-permanent">$ 4,999.99</span></div>-->
-      <!--</div>-->
     </div>
     <div class="ws-group sny-product-swatches-addtocart">
       <div class="ws-group">
@@ -1340,12 +1368,16 @@
             <div class="ws-add-to-cart-container" data-dynamic-block-name="AddToCart"
                  data-dynamic-block-id="QU0KmUBwAnAAAAFBd0Yv3S8v"><input type="hidden" name="addProduct" value=""/>
 
-              <li:wants-button href="http://54.193.114.254:1337/products/1/wants"><button class="li-wants-button" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
-
               <button type="submit"
                       class="ws-submit ws-add-to-cart-submit kor-cart-button ws-add-to-cart-active kor-open-interstitial-dialog"
                       disabled="disabled">Add to Cart
               </button>
+              <div class="ws-group sny-product-price-group">
+                <div class="kor-product-sale-price sny-product-sale-price" data-dynamic-block-name="Sale-Price" data-dynamic-block-id="hHEKmUBwmSQAAAFBOEQv3S8v">
+                  <span class="kor-product-sale-price-value ws-sale-price ws-sale-price-lower ws-sale-price-temporary">$ 2,699</span><sup>.99</sup>
+                </div>
+                <div class="kor-product-price kor-product-list-price" data-dynamic-block-name="Informational-Price" data-dynamic-block-id="DRsKmUBwsaMAAAFBFHsv3S8v"><span class="kor-product-was-price-value ws-price  ws-price-higher ws-price-permanent">$ 4,999</span><sup>.99</sup></div>
+              </div>
             </div>
             <div class="ws-field ws-quantity kor-product-quantity-component "
                  data-dynamic-block-name="ProductQuantityMessaging" data-dynamic-block-id="To8KmUBwdQUAAAFBmEYv3S8v">
