style(header) update button sizes

--- a/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
+++ b/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
@@ -1311,18 +1311,16 @@
       </h2>
 
       <style type="text/css">
-        .bottom-header {
-          height: 25px;
-        }
         .bottom-header > div {
           display: inline-block;
-          height: 25px;
           margin-right: 75px;
           vertical-align: top;
         }
-        .bottom-header > div > img,
+        .bottom-header > div > img {
+          height: 30px;
+        }
         .bottom-header > div button {
-          height: 25px;
+          height: 30px;
         }
         .bottom-header .li-wants-button {
           color: #FFFFFF;
