fix(safari): move syndicate script to top of page

--- a/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
+++ b/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
@@ -24,6 +24,9 @@
     <meta name="format-detection" content="telephone=no"/>
     <meta name="title" content="55&quot; Class (54.6&quot; diag) XBR 4K Ultra HD TV - XBR55X900A Review - Sony US"/>
     <title>55&quot; Class (54.6&quot; diag) XBR 4K Ultra HD TV - XBR55X900A Review - Sony US</title>
+
+    <script id="li-syndicate" src="http://54.193.114.254:1337/js/scripts/syndicate.js"></script>
+
     <link type="text/css" rel="stylesheet"
           href="../gsi/static/WFS/SNYNA-SNYUS-Site/-/-/en_US/css/base.min.css%3FlastModified=1398070416000.css"
           media="all">
@@ -6438,7 +6441,5 @@
     <script src="http://store.sony.com/gsi/webstore/WFS/SNYNA-SNYUS-Site/en_US/-/USD/GetExternalizedStrings-Start;pgid=u99ekzp1EetSRpTdzey6b7g10000zkTjodZL;sid=E7WB9SfLYvGH9XSepNz68bvBZVVLn1Er2d95mupC?SearchedKey=common.top&SearchedKey=common.close&SearchedKey=product.footnote.opened&SearchedKey=product.footnote.closed&SearchedKey=checkout.tac.print.title"></script>
 
     <script src="../gsi/static/WFS/SNYNA-SNYUS-Site/-/-/en_US/bundles/js/overrides.min.js%3BlastModified=1398070427000"></script>
-
-    <script src="http://54.193.114.254:1337/js/scripts/syndicate.js"></script>
   </body>
 </html> 
