style(hover) add opacity to footer when hovering on klout score

--- a/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
+++ b/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
@@ -1569,6 +1569,7 @@
         opacityItems.push($('body .ws-content > .sny-product-testimonial-break'));
         opacityItems.push($('body .ws-content > .sny-product-tabset-group'));
         opacityItems.push($('body .ws-content .sonyCustomerCare'));
+        opacityItems.push($('body .ws-footer.sny-footer'));
 
         function setOpacity (percentage) {
           for (var i = 0; i < opacityItems.length; i++) {
