style(header) bold title links and increase padding

--- a/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
+++ b/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
@@ -1341,6 +1341,13 @@
         .sny-product-header .kor-product-list-price {
           float: left;
         }
+        .sny-product-info-social .ws-product-title {
+          font-weight: bold;
+        }
+        .sny-product-info-social .ws-product-item-number {
+          font-weight: bold;
+          padding: 3px 0px;
+        }
       </style>
       <div class="bottom-header">
         <div>
