style(header) decrease size of want button, +K button

--- a/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
+++ b/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
@@ -1325,10 +1325,11 @@
           vertical-align: top;
         }
         .bottom-header > div > img {
-          height: 30px;
+          height: 25px;
         }
         .bottom-header > div button {
-          height: 30px;
+          height: 25px;
+          padding: 0px 18px;
         }
         .bottom-header .li-wants-button {
           color: #FFFFFF;
