fix(header) add html stars instead of image placeholder

--- a/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
+++ b/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
@@ -1327,6 +1327,10 @@
         .bottom-header > div > img {
           height: 25px;
         }
+        .bottom-header > div.stars {
+          color: #e8112c;
+          font-size: 25px;
+        }
         .bottom-header > div button {
           height: 25px;
           padding: 0px 18px;
@@ -1351,8 +1355,8 @@
         }
       </style>
       <div class="bottom-header">
-        <div>
-          <img src="/lithium/mobile_stars.png">
+        <div class="stars">
+          ★★★★★
         </div>
         <div>
           <img src="/lithium/sm_klout_+k_green.png">
