--- a/assets/admin/index.html
+++ b/assets/admin/index.html
@@ -237,6 +237,17 @@
           </div>
         </div>
 
+        <div class="row" style="margin-top:1em;">
+          <div class="col-md-5" style="font-weight:bold;color:#663366;">
+            Budget remaining:
+          </div>
+        </div>
+        <div class="row" style="font-size:xx-large;">
+          <div class="col-md-5" style="font-weight:bold;color:#663366;">
+            $76,000
+          </div>
+        </div>
+
       </div>
     </div>
     <div class="modal-footer">
