style(header) add in review count and adjust spacing

--- a/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
+++ b/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
@@ -1275,8 +1275,9 @@
       <div class="bottom-header">
         <div class="stars">
           ★★★★★
+          <a>24 Reviews</a>
         </div>
-        <div>
+        <div class="+K">
           <img src="/lithium/sm_klout_+k_green.png">
         </div>
         <div class="wants-button-elm">
