fix(rnr): removing sony rnr paging controls

--- a/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
+++ b/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
@@ -25,7 +25,7 @@
     <meta name="title" content="55&quot; Class (54.6&quot; diag) XBR 4K Ultra HD TV - XBR55X900A Review - Sony US"/>
     <title>55&quot; Class (54.6&quot; diag) XBR 4K Ultra HD TV - XBR55X900A Review - Sony US</title>
 
-    <script id="li-syndicate" src="http://54.193.114.254:1337/js/scripts/syndicate.js"></script>
+    <script id="li-syndicate" src="http://localhost:1337/js/scripts/syndicate.js"></script>
 
     <link type="text/css" rel="stylesheet" href="lithium/styles-desktop.css" media="all">
 
@@ -1280,7 +1280,7 @@
           <img src="/lithium/sm_klout_+k_green.png">
         </div>
         <div class="wants-button-elm">
-          <li:wants-button href="http://54.193.114.254:1337/products/1/wants"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
+          <li:wants-button href="http://localhost:1337/products/1/wants"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
         </div>
       </div>
       <!--<div id="BVRRSummaryContainer">-->
@@ -4265,72 +4265,14 @@
     </div>
     <div class="kor-collection-link-list-section sny-product-reviews-tab">
 
-      <li:reviews-widget href="http://54.193.114.254:1337/products/1/reviews"></li:reviews-widget>
-
-      <div id="BVRRContainer">
-
-
-        <div id="BVRRSourceID">
-          <div id="BVRRContentValidationID_XBR55X900A">
-            <div class="review hreview-aggregate"><span class="item"><span class="fn"> 55&amp;quot; Class (54.6&amp;quot; diag) XBR 4K Ultra HD TV
-    </span></span><span class="rating"><span class="average"> 4.6
-    </span><span class="best"> 5
-    </span></span><span class="count"> 22
-    </span> <span class="votes">22</span>
-            </div>
-            <div id='55711063'><span class="summary"> A BIG LIE
-    </span><span class="description"> I have been saving money for this TV or a long time, mainly because the advertisement that it can upscale lower resolutions. I finally purchased it &amp; it doesn't upscale at all. It's a BIG disappointment &amp; not worth $3,000. I have always been a SONY fan, but this time I'm not pleased, My recommendations: Don't buy it till 4k content is more available.
-    </span><span class="dtreviewed"> March 18, 2014
-    <span title="2014-03-18" class="value-title"></span></span></div>
-            <div id='55583718'><span class="summary"> Wow, what a television
-    </span><span class="description"> I auditioned this at Best Buy and oh my, what a wonderful television. My only problem was the warranty. If I spend thousands of dollars on this television, I would think I would wish to keep it at least seven years, and at the seven year mark, Sony will no longer support this set, no parts and no service, seven years is the cut off point, so I have to decide if I can live with a set that cannot be worked on after seven years, and obviously you can't sell it, as whoever you sell it to can't get it serviced either?
-    </span><span class="dtreviewed"> March 16, 2014
-    <span title="2014-03-16" class="value-title"></span></span></div>
-            <div id='53333449'><span class="summary"> Best Picture
-    </span><span class="description"> Pros: Best Picture and really sharp and clear.
-    Cons: I am not impressed with the sound at all, sometimes specially while watching Netflix or HuluPlus I am almost turning the volume up to about 70 - 80.
-    The worst thing is though this TV is a smart TV it does not support a keyboard, there is an app for it but it is not very convenient to use that app. those who are counting on browsing the Internet with this TV, just forget it without the key board.
-    </span><span class="dtreviewed"> January 23, 2014
-    <span title="2014-01-23" class="value-title"></span></span></div>
-            <div id='48349071'><span class="summary"> Can't wait to buy this TV!
-    </span><span class="description"> Stellar leadership by Sony in this market, once again!
-    </span><span class="dtreviewed"> October 23, 2013
-    <span title="2013-10-23" class="value-title"></span></span></div>
-            <script type="text/javascript">
-              document.getElementById('BVRRContentValidationID_XBR55X900A').style.display = 'none';
-            </script>
-          </div>
-          <div class="BVRRPager BVRRPageBasedPager">
-    <span class="BVRRPageLink BVRRPageNumber"> <a title="2" data-bvcfg="__CONFIGKEY__"
-                                                  data-bvjsref="http://reviews.store.sony.com/5050hosted-en_us/XBR55X900A/reviews.djs?format=embeddedhtml&amp;page=2&amp;scrollToTop=true"
-                                                  class="BVPageLink" href="javascript://">2</a>
-    </span><span class="BVRRPageLink BVRRPageNumber"> <a title="3" data-bvcfg="__CONFIGKEY__"
-                                                         data-bvjsref="http://reviews.store.sony.com/5050hosted-en_us/XBR55X900A/reviews.djs?format=embeddedhtml&amp;page=3&amp;scrollToTop=true"
-                                                         class="BVPageLink" href="javascript://">3</a>
-    </span><span class="BVRRPageLink BVRRPageNumber"> <a title="4" data-bvcfg="__CONFIGKEY__"
-                                                         data-bvjsref="http://reviews.store.sony.com/5050hosted-en_us/XBR55X900A/reviews.djs?format=embeddedhtml&amp;page=4&amp;scrollToTop=true"
-                                                         class="BVPageLink" href="javascript://">4</a>
-    </span><span class="BVRRPageLink BVRRPageNumber"> <a title="5" data-bvcfg="__CONFIGKEY__"
-                                                         data-bvjsref="http://reviews.store.sony.com/5050hosted-en_us/XBR55X900A/reviews.djs?format=embeddedhtml&amp;page=5&amp;scrollToTop=true"
-                                                         class="BVPageLink" href="javascript://">5</a>
-    </span><span class="BVRRPageLink BVRRPageNumber"> <a title="6" data-bvcfg="__CONFIGKEY__"
-                                                         data-bvjsref="http://reviews.store.sony.com/5050hosted-en_us/XBR55X900A/reviews.djs?format=embeddedhtml&amp;page=6&amp;scrollToTop=true"
-                                                         class="BVPageLink" href="javascript://">6</a>
-    </span><span class="BVRRPageLink BVRRNextPage"><a title="next" data-bvcfg="__CONFIGKEY__"
-                                                      data-bvjsref="http://reviews.store.sony.com/5050hosted-en_us/XBR55X900A/reviews.djs?format=embeddedhtml&amp;page=2&amp;scrollToTop=true"
-                                                      class="BVPageLink" href="javascript://">next</a></span><span
-              class="BVRRPagerArrows">&gt;&gt;</span></div>
-        </div>
-
-
-      </div>
+      <li:reviews-widget href="http://localhost:1337/products/1/reviews"></li:reviews-widget>
 
       <div
           class="ws-group sny-prod-reviews-cms2"
           ></div>
     </div>
     <div class="kor-collection-link-list-section sny-product-qanda-tab">
-      <li:qanda-widget href="http://54.193.114.254:1337/products/1/qanda"></li:qanda-widget>
+      <li:qanda-widget href="http://localhost:1337/products/1/qanda"></li:qanda-widget>
 
     </div>
     <div class="kor-collection-link-list-section sny-product-accessories-tab">
