chore(reviews): update reviews widget instance width on sony site

--- a/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
+++ b/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
@@ -4266,7 +4266,7 @@
     </div>
     <div class="kor-collection-link-list-section sny-product-reviews-tab">
 
-      <li:reviews-widget href="http://54.193.114.254:1337/products/1/reviews"></li:reviews-widget>
+      <li:reviews-widget href="http://54.193.114.254:1337/products/1/reviews" width="891px"></li:reviews-widget>
 
       <div
           class="ws-group sny-prod-reviews-cms2"
