--- a/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
+++ b/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
@@ -3399,13 +3399,13 @@
     <ul class="ws-collection-link-list-navigation" role="listbox">
 
       <li role="listitem"
-          class="kor-collection-link-list-navigation-item sny-product-overview-tab kor-collection-link-list-navigation-item-active">
+          class="kor-collection-link-list-navigation-item sny-product-overview-tab">
         <a href="javascript:void(0)" class="kor-collection-link">Overview</a>
       </li>
       <li role="listitem" class="kor-collection-link-list-navigation-item sny-product-specs-tab">
         <a href="javascript:void(0)" class="kor-collection-link">Specifications</a>
       </li>
-      <li role="listitem" class="kor-collection-link-list-navigation-item sny-product-reviews-tab">
+      <li role="listitem" class="kor-collection-link-list-navigation-item sny-product-reviews-tab kor-collection-link-list-navigation-item-active">
         <a href="javascript:void(0)" class="kor-collection-link">Reviews</a>
       </li>
       <li role="listitem" class="kor-collection-link-list-navigation-item sny-product-qanda-tab">
@@ -3420,7 +3420,7 @@
     </ul>
     <div class="ws-tab-sections">
 
-    <div class="kor-collection-link-list-section sny-product-overview-tab kor-anchored-tabset-content-active">
+    <div class="kor-collection-link-list-section sny-product-overview-tab">
     <script type="text/javascript">
       var _cms = new Object();
       _cms.webRoot = "/gsi/static/WFS/SNYNA-SNYUS-Site/-/-/en_US";
@@ -4264,7 +4264,7 @@
         </li>
       </ul>
     </div>
-    <div class="kor-collection-link-list-section sny-product-reviews-tab">
+    <div class="kor-collection-link-list-section sny-product-reviews-tab kor-anchored-tabset-content-active">
 
       <li:reviews-widget href="http://54.193.114.254:1337/products/1/reviews" width="891px"></li:reviews-widget>
 
@@ -4273,7 +4273,7 @@
           ></div>
     </div>
     <div class="kor-collection-link-list-section sny-product-qanda-tab">
-      <li:qanda-widget href="http://54.193.114.254:1337/products/1/qanda"></li:qanda-widget>
+      <li:qanda-widget href="http://54.193.114.254:1337/products/1/qanda" width="891px"></li:qanda-widget>
 
     </div>
     <div class="kor-collection-link-list-section sny-product-accessories-tab">
