fix(sony): change server address from local to prod

--- a/assets/m/m.store.sony.com/products/27-XBR55X900A.html
+++ b/assets/m/m.store.sony.com/products/27-XBR55X900A.html
@@ -60,7 +60,7 @@
             </div>
           </header>
         </section>
-        <li:reviews-widget href="http://localhost:1337/products/1/reviews"></li:reviews-widget>
+        <li:reviews-widget href="http://54.193.114.254:1337/products/1/reviews"></li:reviews-widget>
       </div>
       <div id="mainFooter">
         <div class="primary-footer">
