--- a/assets/admin/directives/activity.html
+++ b/assets/admin/directives/activity.html
@@ -1,6 +1,10 @@
 <div class="row" style="margin-bottom:1em;">
 	<div class="col-md-2" style="text-align:center;">
-		<img ng-src="images/{{icon}}.png" width="40" height="40" />
+		<div style="position:relative">
+			<img ng-src="images/{{icon}}.png" width="40" height="40" />
+			<img src="images/klout_bubble.png" style="position:absolute;top:25px;left:-7px;" width="20" height="20">
+			<div style="position:absolute;top:27px;color:white;font-size:10px;left:-2px;">{{klout}}</div>
+		</div>
 	</div>
 	<div class="col-md-3" style="">
 		<strong style="font-size:small;">{{first}}</strong><br/>
