Yet more changes to admin

--- a/assets/admin/index.html
+++ b/assets/admin/index.html
@@ -108,13 +108,13 @@
               45
             </div>
             <div>
-              Sony 55&quot; Class XBR...
+              Sony Xperia Z2
             </div>
             <div>
-              Leica T Camera
+              Sony VAIO Duo 11
             </div>
             <div>
-              Nike Free 3.0 2014
+              Sony 4K ES Projector
             </div>
             <div style="font-size:small;">
               See All
