More font size changes

--- a/assets/admin/index.html
+++ b/assets/admin/index.html
@@ -203,7 +203,7 @@
 
         <div class="row">
           <div class="col-md-6">
-            <div style="font-size:x-large;font-weight:bold;">{{count}} customers</div>
+            <div style="font-size:xx-large;font-weight:bold;">{{count}} customers</div>
           </div>
         </div>
         <div class="row">
@@ -247,7 +247,7 @@
             Budget remaining:
           </div>
         </div>
-        <div class="row" style="font-size:xx-large;">
+        <div class="row" style="font-size:x-large;">
           <div class="col-md-5" style="font-weight:bold;color:#663366;">
             $76,000
           </div>
