Changing some activity stuff

--- a/assets/admin/directives/activity.html
+++ b/assets/admin/directives/activity.html
@@ -14,7 +14,7 @@
 		+K's<br/>
 		<strong>{{plusk}}</strong>
 	    <div style="background-color:#333333;width:33px;height:8px;position:relative;">
-	      <div style="background-color:#FF9B10;width:16px;height:8px;position:absolute;" ng-if="plusk>0">
+	      <div style="background-color:#FF9B10;width:16px;height:8px;position:absolute;" ng-if="plusk!='0'">
 	      </div>
 	    </div>
 	</div>
