Change sell to see

--- a/assets/admin/index.html
+++ b/assets/admin/index.html
@@ -101,7 +101,7 @@
               23
             </div>
             <div style="font-size:small;">
-              Sell All
+              See All
             </div>
             <div style="margin-top:0.5em;font-weight:bold;">
               <span style="color:#E67D69;">Wants</span>
