--- a/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
+++ b/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
@@ -25,7 +25,7 @@
     <meta name="title" content="55&quot; Class (54.6&quot; diag) XBR 4K Ultra HD TV - XBR55X900A Review - Sony US"/>
     <title>55&quot; Class (54.6&quot; diag) XBR 4K Ultra HD TV - XBR55X900A Review - Sony US</title>
 
-    <script id="li-syndicate" src="http://54.193.114.254:1337/js/scripts/syndicate.js"></script>
+    <script id="li-syndicate" src="http://54.193.114.254:1337/assets/widgets/js/scripts/syndicate.js"></script>
 
     <link type="text/css" rel="stylesheet" href="lithium/styles-desktop.css" media="all">
 
@@ -1281,7 +1281,7 @@
           <img src="/lithium/sm_klout_+k_green.png">
         </div>
         <div class="wants-button-elm">
-          <li:wants-button href="http://54.193.114.254:1337/products/1/wants"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
+          <li:wants-button href="http://54.193.114.254:1337/widgets/wants/1"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
         </div>
       </div>
       <!--<div id="BVRRSummaryContainer">-->
@@ -4267,14 +4267,14 @@
     </div>
     <div class="kor-collection-link-list-section sny-product-reviews-tab kor-anchored-tabset-content-active">
 
-      <li:reviews-widget href="http://54.193.114.254:1337/products/1/reviews" width="891px"></li:reviews-widget>
+      <li:reviews-widget href="http://54.193.114.254:1337/widgets/reviews/1" width="891px"></li:reviews-widget>
 
       <div
           class="ws-group sny-prod-reviews-cms2"
           ></div>
     </div>
     <div class="kor-collection-link-list-section sny-product-qanda-tab">
-      <li:qanda-widget href="http://54.193.114.254:1337/products/1/qanda" width="891px"></li:qanda-widget>
+      <li:qanda-widget href="http://54.193.114.254:1337/widgets/qanda/1" width="891px"></li:qanda-widget>
 
     </div>
     <div class="kor-collection-link-list-section sny-product-accessories-tab">
