fix(widget links): update product id

--- a/assets/m/m.store.sony.com/products/27-XBR55X900A.html
+++ b/assets/m/m.store.sony.com/products/27-XBR55X900A.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <title>55&quot; Class (54.6&quot; diag) XBR 4K Ultra HD TV - XBR55X900A Review - Sony US</title>
-    <script id="li-syndicate" src="http://54.193.114.254:1337/assets/widgets/js/scripts/syndicate.js"></script>
+    <script id="li-syndicate" src="http://localhost:1337/assets/widgets/js/scripts/syndicate.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
     <meta name="format-detection" content="telephone=no">
@@ -60,7 +60,7 @@
             </div>
           </header>
         </section>
-        <li:reviews-widget href="http://54.193.114.254:1337/widgets/reviews/1"></li:reviews-widget>
+        <li:reviews-widget href="http://localhost:1337/widgets/reviews/JUh4fLO4TJK-aUcCMa5iQA"></li:reviews-widget>
       </div>
       <div id="mainFooter">
         <div class="primary-footer">
