fix(urls): fix urls from localhost to distributed.qa.lcloud.com

--- a/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
+++ b/assets/store.sony.com/55-class-54.6-diag-xbr-4k-ultra-hd-tv-zid27-XBR55X900A/cat-27-catid-Sony-HD-TVs.html
@@ -25,7 +25,7 @@
     <meta name="title" content="55&quot; Class (54.6&quot; diag) XBR 4K Ultra HD TV - XBR55X900A Review - Sony US"/>
     <title>55&quot; Class (54.6&quot; diag) XBR 4K Ultra HD TV - XBR55X900A Review - Sony US</title>
 
-    <script id="li-syndicate" src="http://localhost:1337/assets/widgets/js/scripts/syndicate.js"></script>
+    <script id="li-syndicate" src="http://distributed.qa.lcloud.com:1337/assets/widgets/js/scripts/syndicate.js"></script>
 
     <link type="text/css" rel="stylesheet" href="lithium/styles-desktop.css" media="all">
 
@@ -4267,14 +4267,14 @@
     </div>
     <div class="kor-collection-link-list-section sny-product-reviews-tab kor-anchored-tabset-content-active">
 
-      <li:reviews-widget href="http://localhost:1337/widgets/reviews/JUh4fLO4TJK-aUcCMa5iQA" width="891px"></li:reviews-widget>
+      <li:reviews-widget href="http://distributed.qa.lcloud.com:1337/widgets/reviews/JUh4fLO4TJK-aUcCMa5iQA" width="891px"></li:reviews-widget>
 
       <div
           class="ws-group sny-prod-reviews-cms2"
           ></div>
     </div>
     <div class="kor-collection-link-list-section sny-product-qanda-tab">
-      <li:qanda-widget href="http://localhost:1337/widgets/qanda/JUh4fLO4TJK-aUcCMa5iQA" width="891px"></li:qanda-widget>
+      <li:qanda-widget href="http://distributed.qa.lcloud.com:1337/widgets/qanda/JUh4fLO4TJK-aUcCMa5iQA" width="891px"></li:qanda-widget>
 
     </div>
     <div class="kor-collection-link-list-section sny-product-accessories-tab">
