--- a/assets/test/hawleylocalrnr1.html
+++ b/assets/test/hawleylocalrnr1.html
@@ -1,8 +1,8 @@
 <html>
 	<head>
-		<script id="li-syndicate" src="http://localhost:1337/assets/widgets/js/scripts/syndicate.js"></script></script>
+	<script id="li-syndicate" src="http://localhost:1337/assets/widgets/js/scripts/syndicate.js"></script>
 	</head>
 	<body>
-		<li:reviews-widget href="http://localhost:1337/widgets/reviews/hJuBuI0hSUqvtCwmmTFzUA"></li:reviews-widget>
+	<li:reviews-widget href="http://localhost:1337/widgets/reviews/Sht_kvGMSxqFRqeh_dpS9g"></li:reviews-widget>
 	</body>
 </html>
