--- a/assets/test/hawleylocalwant1.html
+++ b/assets/test/hawleylocalwant1.html
@@ -1,8 +1,8 @@
 <html>
 	<head>
-	<script id="li-syndicate" src="http://localhost:1337/assets/widgets/js/scripts/syndicate.js"></script></script>
+	<script id="li-syndicate" src="http://localhost:1337/assets/widgets/js/scripts/syndicate.js"></script>
 	</head>
 	<body>
-	<li:wants-widget href="http://localhost:1337/widgets/wants/hJuBuI0hSUqvtCwmmTFzUA"></li:wants-widget>
+	<li:wants-widget href="http://localhost:1337/widgets/wants/Sht_kvGMSxqFRqeh_dpS9g"></li:wants-widget>
 	</body>
 </html>
