chore(seed):adding mobile support to test page

--- a/assets/test/hawleylocalrnr2.html
+++ b/assets/test/hawleylocalrnr2.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<script id="li-syndicate" src="http://localhost:1337/assets/widgets/js/scripts/syndicate.js"></script></script>
 	</head>
 	<body>
