--- a/assets/test/qarnr.html
+++ b/assets/test/qarnr.html
@@ -1,9 +1,10 @@
 <!doctype html>
+<html>
   <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <script id="li-syndicate" src="http://distributed.qa.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <script id="li-syndicate" src="http://sonydemo.dev.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
   </head>
-  <body>
-  <li:reviews-widget href="http://distributed.qa.lcloud.com/widgets/reviews/yTO2QWbbQCuRRBpAYcZYiw"></li:reviews-widget>
+  <body style="padding:0;margin:0;">
+    <li:reviews-widget href="http://sonydemo.dev.lcloud.com/widgets/reviews/yTO2QWbbQCuRRBpAYcZYiw"></li:reviews-widget>
   </body>
 </html>
