--- a/assets/test/qa-all-formatted.html
+++ b/assets/test/qa-all-formatted.html
@@ -42,7 +42,7 @@
       <div class="side block">
         <li:wants-button href="http://distributed.qa.lcloud.com/widgets/wants/d8f9b792-4b29-4793-b6a7-81f8c4a43e62" min-price="2500" max-price="3400"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
         <hr />
-        <li:endorsements-widget href="http://distributed.qa.lcloud.com/widgets/endorsements/d8f9b792-4b29-4793-b6a7-81f8c4a43e62?id=8&id=9"></li:endorsements-widget>
+       <li:endorsements-widget id-list="41,42,43,44,45" href="http://distributed.qa.lcloud.com/widgets/endorsements/d8f9b792-4b29-4793-b6a7-81f8c4a43e62"></li:endorsements-widget>
       </div>
     </div>
   </div>
