--- a/assets/test/hawleyendorsevol7.html
+++ b/assets/test/hawleyendorsevol7.html
@@ -4,7 +4,7 @@
     <script id="li-syndicate" src="http://localhost:1337/assets/widgets/js/scripts/syndicate.js"></script>
   </head>
   <body>
-  <li:endorsements-widget href="http://localhost:1337/widgets/endorsements/kHTNhFsASAqvm2L-FhsG8g?id=35&id=36&id=37&id=39&id=40"></li:endorsements-widget>
+  <li:endorsements-widget id-list="5,6,7,8,9" href="http://localhost:1337/widgets/endorsements/product-sony-hawley1"></li:endorsements-widget>
   </body>
 </html>
   
