--- a/assets/test/qa-endorsement-formatted.html
+++ b/assets/test/qa-endorsement-formatted.html
@@ -37,8 +37,7 @@
     </div>
     <div class="col-lg-3">
       <div class="side block">
-   <li:endorsements-widget id-list="51,52,53,54,55" href="http://distributed.qa.lcloud.com/widgets/endorsements/product-sony-hawley-tv"></li:endorsements-widget>
-      </div>
+<li:endorsements-widget id-list="26,27,28,29,31" href="http://distributed.qa.lcloud.com/widgets/endorsements/product-sony-hawley-tv"></li:endorsements-widget>      </div>
     </div>
   </div>
   <div class="row">
